# budget_model

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: actor.rs  contribution.rs  frequency.rs  lib.rs  transaction.rs
src/model/: contribution.rs  frequency.rs  mod.rs
