[package]
name = "budget-model"
version = "0.0.1"
edition = "2018"
authors = ["Pete Hayes <pete@hayes.id.au>"]
license = "MPL-2.0"
description = "Realtime money manager"
readme = "README.md"

[dependencies]
chrono = "0.4"
rust_decimal = "1.15"
rust_decimal_macros = "1.15"
log = "0.4"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.9"
